WN-5141
- remove "illegal-access=permit"; not available option with Java 17