@@ -195,10 +195,8 @@
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
                                 <argLine>
-                                    --illegal-access=permit
                                     --add-opens java.base/java.lang=ALL-UNNAMED
                                     --add-opens java.base/java.util=ALL-UNNAMED
-                                    -Dillegal-access=permit
                                     @{argLine}
                                 </argLine>
                             </configuration>
